--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "test": "jest --passWithNoTests --no-cache --runInBand --watchAll=false",
     "test:watch": "yarn test --watchAll",
     "test:staged": "yarn test --findRelatedTests",
-    "test:ci": "yarn test --coverage",
+    "test:coverage": "yarn test --coverage",
+    "test:ci": "yarn jest --ci --coverage",
     "test:coveralls": "yarn run test:ci && coveralls < coverage/lcov.info",
     "prepare-husky": "husky install"
   },
   "dependencies": {
     "@nimbus-ds/components": "^5.2.0",
     "@nimbus-ds/styles": "^9.5.0",
+    "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
@@ -34,7 +36,6 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
-    "axios": "^1.5.1",
     "babel-jest": "^29.7.0",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -47,6 +48,7 @@
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-node-polyfills": "^0.14.1",
-    "vite-plugin-svgr": "^4.0.0"
+    "vite-plugin-svgr": "^4.0.0",
+    "yup": "^1.3.2"
   }
 }
