--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,6 @@
       "@/tests/*": ["../tests/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "jest.setup.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
