--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,3 +1,4 @@
 {
-  "*.{ts,tsx}": ["npm run lint:fix", "npm run test:staged"]
+  "*.{ts,tsx}": ["prettier --write", "npm run lint:fix", "npm run test:staged"],
+  "*.+(json|css|scss|md)": ["prettier --write"]
 }
