--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-localstorage-mock": "^2.4.26",
+    "prettier": "^3.1.1",
     "svg-jest": "^1.0.1",
     "ts-jest": "^29.1.1",
     "typescript": "^5.0.2",
